--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ width:400px
                                         <b>Price:90/-</b><br>
                                         <br>
                                         <button>
-                                            buy now
+                                            buy now !
                                         </button>
                                     </div>
                 </div>
