--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ align-items: center;
     text-align: center;
     background-color:rgb(222, 195, 151);
     box-shadow:0px 0px 4px 4px rgb(38, 4, 80) ;
-height:350px;
-width:400px
+height:400px;
+width:450px
 
 }
 
@@ -233,7 +233,7 @@ width:400px
                                         <b>Price:90/-</b><br>
                                         <br>
                                         <button>
-                                            buy now !
+                                            buy now 
                                         </button>
                                     </div>
                 </div>
