--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ align-items: center;
     margin-right:50;
     padding:10px 5px 10px 5px;
     text-align: center;
-    background-color:rgb(222, 195, 151);
+    background-color:rgb(241, 114, 173);
     box-shadow:0px 0px 4px 4px rgb(38, 4, 80) ;
 height:400px;
 width:450px
@@ -186,7 +186,7 @@ width:450px
                                                             <img src="img/dairymilk.jpg"height="250"width="250"><br><br>
                                                                  <b style="text-align: center;">***</b><br>
                                                             <br>
-                                                                        <b>Price:5/0-</b><br>
+                                                                        <b>Price:50/-</b><br>
                                                                         <br>
                                                                         <button>
                                                                             buy now
@@ -197,8 +197,9 @@ width:450px
                 <h2 style="text-align:center;margin-left:50px;background-color:rgb(119, 156, 219);font-size:40px;font-family: 'Times New Roman', Times, serif;">**Ice cream**</h2>
                 <div class="container1"> 
                     <div class="item">
-                        <img src="img/ice cream1.jpg"height="250"width="250"><br><br>
-                     <b style="text-align: center;">***</b><br>
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtctOso9_c64YxiquWSmtfHPL2kITbft8dgg&s"height="250"width="250"><br><br>
+                        
+                     <b style="text-align: center;"> Vanilla Ice-Cream</b><br>
                        <br>
                             <b>Price:120/-</b><br>
                             <br>
@@ -207,8 +208,8 @@ width:450px
                             </button>
                         </div>
                         <div class="item">
-                            <img src="img/ice2.jpg"height="250"width="250"><br><br>
-                         <b style="text-align: center;">***</b><br>
+                            <img src="https://cdn.prod.website-files.com/60daa13b0b5a8268646b4241/645d76f76667b3f05dff2b25_Vegan-Pistachio-Ice-Cream-17.jpg"height="250"width="250"><br><br>
+                         <b style="text-align: center;">Pistachio Ice-Cream</b><br>
                            <br>
                                 <b>Price:29/-</b><br>
                                 <br>
